<resources>
    <string name="app_name">App Rick Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pesquisar_personagem">Pesquisar personagem</string>
    <string name="personagens">Personagens</string>
    <string name="resete">Resete</string>
    <string name="episodios">Episódios</string>
    <string name="origem">Origem</string>
    <string name="localizacao">Localização</string>
    <string name="favoritos">Favoritos</string>
    <string name="todos_personagens">Todos Personagens</string>
</resources>