<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black_ligth"
    tools:context=".ui.main.views.PesonagensFragment" >

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchViewPesquisaPersonagens"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimensao_50_dp"
        android:layout_marginStart="@dimen/dimensao_16_dp"
        android:layout_marginTop="@dimen/dimensao_16_dp"
        android:layout_marginEnd="@dimen/dimensao_8_dp"
        android:elevation="@dimen/dimensao_elevacao_2_dp"
        app:queryHint="@string/pesquisar_personagem"
        app:iconifiedByDefault="false"
        android:background="@drawable/background_pesquisa"
        app:layout_constraintEnd_toStartOf="@+id/botaoFiltroPersonagens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageButton
        android:id="@+id/botaoFiltroPersonagens"
        android:layout_width="@dimen/dimensao_50_dp"
        android:layout_height="@dimen/dimensao_50_dp"
        android:layout_marginTop="@dimen/dimensao_16_dp"
        android:layout_marginEnd="@dimen/dimensao_16_dp"
        android:src="@drawable/ic__filter_24"
        android:background="@drawable/background_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewPersonagens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimensao_18_dp"
        android:text="@string/personagens"
        android:textSize="@dimen/tamanho_texto_18_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textViewResete"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewPesquisaPersonagens" />

    <TextView
        android:id="@+id/textViewResete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="@string/resete"
        android:textColor="@android:color/holo_blue_light"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/recycclerviewPersonagens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewPesquisaPersonagens"
        app:layout_constraintVertical_bias="0.65" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycclerviewPersonagens"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPersonagens"
        tools:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        tools:listitem="@layout/persongem_item_view_recyclerview"
        tools:orientation="vertical"
        tools:spanCount="2"
        >

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>