<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_pesquisa"
        android:elevation="0dp"
        tools:context=".ui.views.DetalhePersonagemFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimensao_32_dp"
            android:background="@drawable/background_detalher_personagem"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.59000003">

            <TextView
                android:id="@+id/textViewEpisodios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episodios"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toEndOf="@+id/textViewTituloOrigem"
                app:layout_constraintTop_toBottomOf="@+id/textViewGenero"
                app:layout_constraintVertical_bias="0.23000002" />

            <TextView
                android:id="@+id/textViewQuantidadeEpisodios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamanho_texto_18_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textViewEpisodios"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.55"
                app:layout_constraintStart_toEndOf="@+id/textViewEpisodios"
                app:layout_constraintTop_toTopOf="@+id/textViewEpisodios"
                tools:text="42" />

            <TextView
                android:id="@+id/textViewGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.66"
                tools:text="Gênero" />

            <TextView
                android:id="@+id/textViewTituloOrigem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origem"
                android:textSize="@dimen/tamanho_fonte_20_dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.81" />

            <TextView
                android:id="@+id/textViewOrigem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimensao_8_dp"
                android:layout_marginEnd="@dimen/dimensao_24_dp"
                android:maxLines="1"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="@+id/textViewTituloOrigem"
                app:layout_constraintTop_toBottomOf="@+id/textViewTituloOrigem"
                tools:text="Earth (C-137)" />

            <TextView
                android:id="@+id/textViewTituloLocalizacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/localizacao"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textViewOrigem"
                app:layout_constraintTop_toBottomOf="@+id/textViewOrigem" />

            <TextView
                android:id="@+id/textViewLocalizacao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:maxLines="1"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="@+id/textViewTituloLocalizacao"
                app:layout_constraintTop_toBottomOf="@+id/textViewTituloLocalizacao"
                tools:text="Citadel of Ricks" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewIdPersonagemDetalhes"
                app:layout_constraintHorizontal_bias="0.164"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.064"
                tools:text="Unknown" />

            <TextView
                android:id="@+id/textViewIdPersonagemDetalhes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimensao_24_dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.89"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.064"
                tools:text="7" />

            <ImageView
                android:id="@+id/imageViewPersonagem"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:src="@drawable/imagem_rick_morty"
                app:layout_constraintBottom_toTopOf="@+id/textViewGenero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewStatus"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/textViewPersonagemNomeDetalhes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:maxLines="2"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPersonagem"
                tools:text="Rick Smith" />

            <TextView
                android:id="@+id/textViewEspecieDetalhes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPersonagemNomeDetalhes"
                tools:text="HUMAN" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButtonSavePersonagemFavorito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_save_24"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>